Overflow on calendarScreen fixed

--- a/PWA/FrontendTs/frontend/src/pages/CalendarScreen/CalendarScreen.scss
+++ b/PWA/FrontendTs/frontend/src/pages/CalendarScreen/CalendarScreen.scss
@@ -64,6 +64,10 @@
     margin-top: 0;
     margin-left: 0;
   }
+  .calendar-overflow{
+    overflow-y: scroll;
+    height: 61vh;
+  }
 }
 
   .calendar-container {
